Fixed several heading's and admonition's formatting
Signed-off-by: Marc Sluiter <msluiter@redhat.com>

--- a/administration/device-plugins.adoc
+++ b/administration/device-plugins.adoc
@@ -71,7 +71,7 @@ spec:
 The full manifest has been truncated for clarity. In this example, the
 `--max-devices` flag was added and set to 300.
 
-**NOTE:** command line arguments must be strings. Use `"300"`, not `300`.
+WARNING: command line arguments must be strings. Use `"300"`, not `300`.
 
 Once each virt-handler pod is re-deployed and running, the new number of devices
 should be in effect. To verify the change took effect, inspect the nodes of the
