--- a/creating-virtual-machines/intro.adoc
+++ b/creating-virtual-machines/intro.adoc
@@ -24,10 +24,8 @@ with any other API resource.
 VirtualMachineInstance API
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-______________________________________________________________________________
-Note: A full API reference is available at
+NOTE: A full API reference is available at
 https://kubevirt.io/api-reference/.
-______________________________________________________________________________
 
 Here is an example of a VirtualMachineInstance object:
 
