--- a/creating-virtual-machines/presets.adoc
+++ b/creating-virtual-machines/presets.adoc
@@ -423,7 +423,7 @@ Matching Multiple VirtualMachineInstances Using MatchLabels
 These `VirtualMachineInstances` have multiple labels, one that is unique
 and one that is shared.
 
-Note: This example breaks from the convention of using os-shortname as a
+NOTE: This example breaks from the convention of using os-shortname as a
 `Label` for demonstration purposes.
 
 [source,yaml]
