--- a/creating-virtual-machines/probes.adoc
+++ b/creating-virtual-machines/probes.adoc
@@ -175,6 +175,6 @@ spec:
     name: cloudinitdisk
 ----
 
-Note that in the case of Readiness Probes, it is also possible to set a
+NOTE: In the case of Readiness Probes, it is also possible to set a
 `failureThreshold` and a `successThreashold` to only flip between ready
 and non-ready state if the probe succeeded or failed multiple times.
