--- a/creating-virtual-machines/run-strategies.adoc
+++ b/creating-virtual-machines/run-strategies.adoc
@@ -32,7 +32,7 @@ overlapping conditions. There are currently four RunStrategies defined:
     running, it will be stopped. This is the same behavior as
     `spec.running: false`.
 
-_Note_: RunStrategy and Running are mutually exclusive, because they can be
+IMPORTANT: RunStrategy and Running are mutually exclusive, because they can be
 contradictory. The API server will reject VirtualMachine resources that define
 both.
 
@@ -59,7 +59,7 @@ RunStrategy Examples
 ~~~~~~~~~~~~~~~~~~~~
 
 Always
-^^^^^^^^^
+^^^^^^
 
 An example usage of the Always RunStrategy.
 
