--- a/creating-virtual-machines/virtio-win.adoc
+++ b/creating-virtual-machines/virtio-win.adoc
@@ -92,7 +92,7 @@ which can be simply mounted to the VirtualMachine.
 The container image, containing the disk is located at: https://hub.docker.com/r/kubevirt/virtio-container-disk
 and the image be pulled as any other docker container:
 
-[bash]
+[source,bash]
 ----
 docker pull kubevirt/virtio-container-disk
 ----
