--- a/using-virtual-machines/life-cycle.adoc
+++ b/using-virtual-machines/life-cycle.adoc
@@ -59,8 +59,6 @@ $ kubectl delete -f vmi.yaml
 $ kubectl delete vmis testvmi
 ----
 
-_________________________________________________________________________________________________________________________________________________________________
-Note: Stopping a VirtualMachineInstance implies that it will be deleted
+IMPORTANT: Stopping a VirtualMachineInstance implies that it will be deleted
 from the cluster. You will not be able to start this
 VirtualMachineInstance object again.
-_________________________________________________________________________________________________________________________________________________________________
