--- a/using-virtual-machines/vmctl.adoc
+++ b/using-virtual-machines/vmctl.adoc
@@ -134,8 +134,9 @@ spec:
 Deployment
 ~~~~~~~~~~
 
-This is an example of using vmctl as a Deployment (Note: this example
-uses the `have-podinfo` PodPreset above):
+This is an example of using vmctl as a Deployment
+
+NOTE: this example uses the `have-podinfo` PodPreset above
 
 [source,yaml]
 ----
@@ -170,8 +171,9 @@ named `testvm`, and instantiate 3 replicas of it.
 Daemonset
 ~~~~~~~~~
 
-This is an example of using vmctl as a Daemonset (Note: this example
-uses the `have-podinfo` PodPreset above):
+This is an example of using vmctl as a Daemonset
+
+NOTE: this example uses the `have-podinfo` PodPreset above
 
 [source,yaml]
 ----
