--- a/administration/annotations_and_labels.adoc
+++ b/administration/annotations_and_labels.adoc
@@ -8,7 +8,7 @@ that may be useful for regular API consumers. This page intentionally
 does _not_ list labels and annotations that are merely part of internal
 implementation.
 
-*Note:* Annotations and labels that are not specific to KubeVirt are
+NOTE: Annotations and labels that are not specific to KubeVirt are
 also documented
 https://kubernetes.io/docs/reference/kubernetes-api/labels-annotations-taints/[here].
 
