--- a/administration/authorization.adoc
+++ b/administration/authorization.adoc
@@ -48,7 +48,7 @@ The admin role also grants users access to view and modify the KubeVirt
 runtime config. This config exists within a configmap called
 *kubevirt-config* in the namespace the KubeVirt components are running.
 
-_NOTE_ Users are only guaranteed the ability to modify the kubevirt
+NOTE: Users are only guaranteed the ability to modify the kubevirt
 runtime configuration if a ClusterRoleBinding is used. A RoleBinding
 will work to provide kubevirt-config access only if the RoleBinding
 targets the same namespace the kubevirt-config exists in.
